# cpptracer

./: .gitignore  CMakeLists.txt  main.cpp
include/: camera.h  color.h  declarations.h  hittable.h  hittable_list.h  interval.h  ray.h  rng.h  rtweekend.h  sphere.h  vec3.h  xoshiro.h
src/: camera.cpp  color.cpp  glad.c  ray.cpp  vec3.cpp
